<resources>
    <string name="app_name">Popup Noti Free</string>
    <string name="hello_world">Hello world!</string>
    <string name="package_name">com.bun.popupnotificationsfree</string>
    <string name="crash_toast_text">Ooooops ! Popup Notify FreeCrashed. Collecting Data !</string>
    <string name="crash_dialog_title">Popup Notify free has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
    <string name="listViewPosition">1</string>
    <string name="talkback_fix">Talkback Fix</string>
    <string name="click_disable">Click Disable</string>
    <string name="reset_completed">Reset Completed</string>
    <string name="service_warning">Popup Noti Free service is not running currently. This service should be running for you to get notifications.</string>
    <string name="tts_warning">Due to a bug in Samsungs\'s Software, you can experience the phone to read aloud some of your actions.\n \nTo prevent this, you will need to disable Samsung TTS and Google TTS. This will not affect any app using TTS features.</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_rateus">Rate Us</string>
    <string name="pref_notification_category">Notification Settings</string>
    <string name="pref_mute_category">Mute Settings</string>
    <string name="pref_advanced_category">Advanced Settings</string>
    <string name="pref_others_category">Misc</string>
    <string name="pref_mute_selected">Mute Selected Apps</string>
    <string name="pref_sleep_hours">Sleep Hours</string>
    <string name="font_color">Choose notification text color.</string>
    <string name="pref_category_accessibility">Accessibility Service</string>
    <string name="pref_settings_service_inactive">Service inactive</string>
    <string name="samsung_tts">Disable Samsung TTS</string>
    <string name="google_tts">Disable Google TTS</string>
    <string name="reset_settings">Reset all Settings</string>
    <string name="reset_message">Click on Yes to reset all the settings.</string>
    <string name="blocked_apps">Blocked Apps</string>
    <string name="blocked_apps_summary">Notifications will not appear when these apps are in use.</string>
    <string name="mute_all_apps">Mute All Apps</string>
    <string name="mute_this_app">Mute this App</string>
    <string name="mute_15_mins">Mute for 15 minutes</string>
    <string name="mute_30_mins">Mute for 30 minutes</string>
    <string name="mute_1_hour">Mute for 1 hour</string>
    <string name="mute_4_hours">Mute for 4 hours</string>
    <string name="mute_8_hours">Mute for 8 hours</string>
    <string name="mute_foreever">Mute For Ever</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="market_url">market://details?id=com.bun.popupnotificationsfree</string>
    <string name="market_url_paid">market://details?id=com.bun.popupnotifications</string>
    <string name="follow_on_facebook">Follow on facebook</string>
    <string name="facebook_url">https://www.facebook.com/bunnydecoder</string>
    <string name="popup_not_service">Popup Noti Free Service</string>
    <string name="activate">Activate</string>
    <string name="later">Later</string>
    <string name="search">Search</string>
    <string name="loading">Loading....</string>
    <string name="com">com.</string>
    <string name="for_ever">FOR EVER</string>
    <string name="mute_app">Mute App</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="service_active">Service Active</string>
    <string name="service_inactive">Service Inactive</string>
    <string name="warning">Warning</string>
    <string name="close">Close</string>
    <string name="upgrade">Upgrade</string>
    <string name="yes">Yes</string>
    <string name="all_apps_muted_till">All Apps Muted till: </string>
    <string name="all_apps_muted">All Apps Muted</string>
    <string name="broadcast_receiver_string">com.bun.popupnotificationfree.NOTIFICATION_CHANGED</string>
    <string name="muted_till">Muted till: </string>
    <string name="muted">Muted </string>
    <string name="mins_15"> for 15 minutes</string>
    <string name="mins_30"> for 30 minutes</string>
    <string name="hour_1"> for 1 hour</string>
    <string name="hour_4"> for 4 hours</string>
    <string name="hour_8"> for 8 hours</string>
    <string name="forever"> for ever</string>
    <string name="search_applications">Search Application</string>
    <string name="mute_selected_apps">Mute Selected Apps</string>
    <string name="dismiss_all">Dismiss All</string>
    <string name="show_expanded_notifications">Show Expanded Notifications</string>
    <string name="expanded_not_summary">Expanded Notifications displays each notifications separately.</string>
    <string name="show_fullscreen_not">Show FullScreen Notifications</string>
    <string name="show_fullscreen_summary">Notifications will be shown on full screen instead of a small window.\nAvailable in Paid version</string>
    <string name="not_text_color">Notification text color</string>
    <string name="not_back_color">Notification background color</string>
    <string name="set_transparent_background">Set transparent background</string>
    <string name="wake_on_not">Wake on Notification</string>
    <string name="lock_screen_only">Lock Screen Only</string>
    <string name="lock_screen_only_summary">Display Notifications only when screen is locked.\nAvailable in Paid Version</string>
    <string name="pref_upgrade_message">Available in Paid version</string>
    <string name="upgrade_to_paid">Upgrade to Paid Version</string>
    <string name="left_swipe">Left Swipe on notification to dismiss the notification.</string>
    <string name="right_swipe">Right Swipe on notification to open the App.</string>
    <string name="long_press">Long press on notification to Mute the notifications.</string>
    <string name="start_tutorial">Start Tutorial</string>
    <string name="start_tutorial_click">Click on Start Tutorial button to start the tutorial.</string>
    <string name="upgrade_now_message">Upgrade to Paid version to unlock below features :\n1)Mute one or more apps\n2)Enable sleep hours\n3)
        			Enable Blocked apps\n4)Disable waking up the screen on new Notification\n5)Transparent Background\nMany more</string>
    <string name="lockscreen_only">Lockscreen Only</string>
    <string name="lockscreen_and_popup">Lockscreen and Popup</string>
    <string name="lockscreen_and_banners">Lockscreen and Banners</string>
    <string name="banners_only">Banners Only</string>
    <string name="popup_only">Popup Only</string>
    <string name="lockscreen_only_summary">Notifications will be shown as popup only when the screen is locked.</string>
    <string name="lockscreen_and_popup_summary">Notifications will be shown as popup when screen is locked as well as when phone is in use.</string>
    <string name="lockscreen_and_banners_summary">Notifications will be shown as popup when screen is locked and banners when phone is in use.</string>
    <string name="popup_only_summary">Show only popups when phone is in use.</string>
    <string name="banners_only_summary">Show only banners when phone is in use.</string>
    <string name="not_type_desc">Notification Type</string>
    <string name="array_1">lockscreen</string>
    <string name="array_2">lockscreen_popup</string>
    <string name="array_3">lockscreen_banners</string>
    <string name="array_4">popup</string>
    <string name="array_5">banners</string>
    <string name="vibrate_summary">Vibrate on swipe</string>
    <string name="sync_desc">Sync with Status bar</string>
    <string name="array_s_1">none</string>
    <string name="array_s_2">one_way</string>
    <string name="array_s_3">two_way</string>
    <string name="none_s_1">None</string>
    <string name="one_way">One way Sync</string>
    <string name="two_way">Two way Sync</string>
    <string name="none_s_1_summary">No Sync between status bar and Notifications of this application(4.3 and above).</string>
    <string name="one_way_summary">Removes Notifications from status bar when dismissed from this application(4.3 and above).</string>
    <string name="two_way_summary">Both ways sync between status bar and this application(4.3 and above).</string>
    <string name="close_all">Close</string>
    <string name="dismiss_all_left_desc">Dismiss all on left swipe</string>
    <string name="dismiss_no_all_left_summary">Dismiss specific notification of the app on left swipe on lockscreen.</string>
    <string name="dismiss_all_left_summary">Dismiss all notifications of the same App on left swipe on lockscreen.</string>
    <string name="dismiss_all_tutorial">Dismiss All closes the notification screen as well as clears the Notifications from status bar.</string>
    <string name="close_all_tutorial">Close button closes the notification screen only and does not clear the notifications from status bar.</string>
    <string name="banner_time_desc">Set Banner show time(Seconds)</string>
    <string name="banner_time_summary">Banner will be visible for : </string>
    <string name="seconds">seconds </string>
    <string name="do_you_love_this_app">Do you love Popup Notifications ?</string>
    <string name="no">No </string>
    <string name="happy_to_know">Happy to know that you like our app. Would you like to rate us on Play Store ? </string>
    <string name="sad_to_know"> Sorry to know that you are not happy with our App. Please provide your feedback to help us improve it better.</string>
    <string name="do_not_show">Do not show this again.</string>
    <string name="send">Send</string>
    <string name="fb_app_not_working">App is not working on my phone.</string>
    <string name="fb_languate_translation">Language translation is not good for my Country.</string>
    <string name="fb_battery">Consumes too much of battery</string>
    <string name="fb_ui_design">UI Design is not good.</string>
    <string name="other">Other Reason :</string>
    <string name="email_subject">Popup Notifications Free Feedback</string>
    <string name="no_of_lines_desc">Max Lines for Notifications</string>
    <string name="no_of_lines_summary">Maximum number of lines to be displayed for each notification : </string>
    <string name="lines">Lines</string>
    <string name="top">Top</string>
    <string name="middle">Middle</string>
    <string name="bottom">Bottom</string>
    <string name="ban_loc_desc">Banner Location</string>
    <string name="animation_title">Disable Animations</string>
    <string name="cards">Cards</string>
    <string name="bubbles">Bubbles</string>
    <string name="theme_title">Theme</string>
    <string name="selected_theme">Selected Theme</string>
    <string name="not_border_color">Border Color</string>
	<string name="font_size_desc">Set Font Size</string>
	<string name="test_lockscreen_desc">Test Lockscreen</string>
	<string name="test_banner_desc">Test Banner</string>
    <string name="show_circular_images">Show circular Images</string>
    <string name="font_title">Set Font</string>
	<string name="normal">Normal</string>
	<string name="aaargh">Aaargh</string>
	<string name="architect">Architect</string>
	<string name="arial">Arial</string>
	<string name="ruach">Ruach</string>
	<string name="calligraffiti">Calligraffiti</string>
	<string name="shoni">Shoni</string>
	<string name="fingerpaint">Fingerpaint</string>
	<string name="georgia">Georgia</string>
	<string name="sofadi">Sofadi</string>
	<string name="typewriter">Typewriter</string>
</resources>