<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:id="@+id/cpRoot"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="20dp" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/white" />

        <RadioGroup
            android:id="@+id/fontTypeId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/fontnormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <RadioButton
                android:id="@+id/fontaaargh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aaargh"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <RadioButton
                android:id="@+id/fontarchitect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/architect"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <RadioButton
                android:id="@+id/fontarial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arial"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <RadioButton
                android:id="@+id/fontruach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ruach"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <RadioButton
                android:id="@+id/fontcalligraffiti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calligraffiti"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <RadioButton
                android:id="@+id/fontshoni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoni"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <RadioButton
                android:id="@+id/fontfingerpaint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fingerpaint"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <RadioButton
                android:id="@+id/fontgeorgia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/georgia"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <RadioButton
                android:id="@+id/fontsofadi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sofadi"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <RadioButton
                android:id="@+id/fonttypewriter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/typewriter"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RadioGroup>
    </LinearLayout>

</ScrollView>