<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scvId"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            
            android:drawableRight="@drawable/rightarrow"                       
            android:singleLine="true"
            android:text="@string/right_swipe"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" 
            android:layout_weight="95"/>
   

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:background="#00000000"
            android:contentDescription="@string/left_swipe"
            android:padding="0.0dip"
            android:src="@drawable/leftarrow" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/left_swipe"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="95"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:contentDescription="@string/long_press"
            android:padding="0.0dip"
            android:src="@drawable/touch" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/long_press"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>